--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,5 @@ crashlytics-build.properties
 
 /Assets/TextMesh Pro/
 /Assets/TextMesh Pro.meta
+/Assets/Unity.VisualScripting.Generated/
+/Assets/Unity.VisualScripting.Generated.meta
